# cs673f25a2project-cs673a2f25team5

./: .gitignore  .gitleaks.toml  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.dev.yaml  docker-compose.prod.yaml  package-lock.json  package.json  pyproject.toml  requirements.txt  team.md
code/backend/: Dockerfile  backend-README.md  leak_demo.py  pyproject.toml  requirements-test.txt  requirements.txt  tox.ini
code/backend/app/: __init__.py  auth.py  config.py  main.py
code/backend/app/db/: attendees.py  categories.py  db.py  events.py  filters.py  invitations.py  payments.py  users.py
code/backend/app/models/: attendees.py  categories.py  events.py  exceptions.py  invitations.py  patch.py  payments.py  users.py
code/backend/app/routes/: attendees.py  categories.py  db.py  events.py  filter_helper.py  invitations.py  payments.py  shared_responses.py  users.py
code/backend/app/service/: attendees.py  events.py  (+7 more)
code/backend/test/: conftest.py  test_attendees_failure_cases.py  test_attendees_success_cases.py  test_auth_failure_cases.py  test_auth_success_cases.py  test_categories_failure_cases.py  test_categories_success_cases.py  test_db_failure_cases.py  test_db_success_cases.py  test_events_failure_cases.py  test_events_success_cases.py  test_filter_helper.py  test_filter_helper_failure_cases.py  test_filter_helper_success_cases.py  test_invitations_failure_cases.py  test_invitations_success_cases.py  test_payments_failure_cases.py  test_payments_success_cases.py  test_users.py  test_users_failure_cases.py  test_users_success_cases.py
(+176 files in other folders)
